--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,12 +1,12 @@
 *{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;    
+    padding: 0;     
 }
 .container{
     width: 100%;
     max-width: 1200px;
-    margin: 0px auto;
+    margin: 20px auto;
 }
 .templateRow{
     content: " ";
@@ -26,11 +26,21 @@
     padding: 12px;
     float: left;
 }
+[class*="col-offset-"]{
+    min-height: 7px;
+    padding: 12px;
+    float: left;
+}
 @function columnas($i){
     @return percentage(($i/12));
 }
 @for $i from 1 through 12{
     .col-#{$i}{
         width: columnas($i);
+    }
+}
+@for $i from 1 through 12{
+    .col-offset-#{$i}{
+        margin-left: columnas($i);
     }
 }
